feat(Root): APIs to let the players edit react and delete any message that they want
