# app/blueprints/chats_route.py
@@ -1,10 +1,8 @@
-from flask_socketio import emit  # type: ignore
 from flask.json import jsonify
 from flask import Blueprint, request
-from uuid import uuid4
 
+from uuid import uuid4
 from datetime import datetime
-from typing import Dict, Any
 
 from orm.database import Builder, Relationship
 
@@ -52,35 +50,73 @@ def send_message(room_id: str):
     return response, 201
 
 
-@chats_bp.route("/channel/<string:room_id>/<string:chat_id>/react", methods=["POST"])
-def react_to_message(room_id: str, chat_id: str):
+@chats_bp.route("/channel/<string:room_id>/<string:chat_id>/react/", methods=["POST"])
+def react_message(room_id: str, chat_id: str):
     data = request.get_json()
     created_at = datetime.now().strftime("%Y-%m-%d %H:%M:%S")
 
-    lastrowid = (
-        Builder.query("chat_reactions")
-        .fields(["chat_id", "sender_id", "emoji", "created_at"])
-        .values((chat_id, data["sender_id"], data["emoji"], created_at))
-        .create()
-    )
+    affected_row = (Builder.query("chat_reactions")
+    .fields(["id", "count"])
+    .where(f"chat_id = '{chat_id}'"
+           f" AND emoji = '{data['emoji']}'")
+    .read())
 
-    chat_reaction: Dict[str, Any] = {
-        "id": lastrowid,
-        "chat_id": chat_id,
-        "sender_id": data["sender_id"],
-        "emoji": data["emoji"],
-        "count": 1,
-        "created_at": created_at,
-    }
+    if affected_row.exists:
+        first = affected_row.fetchone()
+        
+        (Builder.query("chat_reactions")
+        .fields(["count"])
+        .values((first["count"] + 1,))
+        .where(f"chat_id = '{chat_id}' AND emoji = '{data['emoji']}'")
+        .update())
+        
+        response = jsonify({"success": True, "message": f"Reaction added successfully"})
+        return response, 201
 
-    emit(
-        "channel:reaction",
-        chat_reaction,
-        to=room_id,
-        broadcast=True,
-        include_self=False,
-        namespace="/channel"
-    )
+    (Builder.query("chat_reactions")
+    .fields(["chat_id", "sender_id", "emoji", "created_at"])
+    .values((chat_id, data["sender_id"], data["emoji"], created_at))
+    .create())
 
     response = jsonify({"success": True, "message": f"Reaction added successfully"})
     return response, 201
+    
+@chats_bp.route("/channel/<string:room_id>/<string:chat_id>/delete/", methods=["DELETE"])
+def delete_message(room_id: str, chat_id: str):
+    affected_row = (Builder.query("chats")
+    .where(f"id = '{chat_id}'")
+    .read())
+    
+    if not affected_row.exists:
+        response = jsonify({"success": False, "message": "Message not found"})
+        return response, 404
+    
+    (Builder.query("chats")
+    .where(f"id = '{chat_id}'")
+    .delete())
+    
+    response = jsonify({"success": True, "message": "Message deleted successfully"})
+    return response, 200
+
+    
+@chats_bp.route("/channel/<string:room_id>/<string:chat_id>/edit/", methods=["PATCH"])
+def edit_message(room_id: str, chat_id: str):
+    affected_row = (Builder.query("chats")
+    .where(f"id = '{chat_id}'")
+    .read())
+
+    if not affected_row.exists:
+        response = jsonify({"success": False, "message": "Message not found"})
+        return response, 404
+
+    data = request.get_json()
+    modified_at = datetime.now().strftime("%Y-%m-%d %H:%M:%S")
+
+    (Builder.query("chats")
+    .fields(["message", "modified_at"])
+    .values((data["message"], modified_at,))
+    .where(f"id = '{chat_id}'")
+    .update())
+
+    response = jsonify({"success": True, "message": "Message modified successfully"})
+    return response, 200
